<resources>
    <string name="app_name">Limpiezas Néteo</string>
    <string name="name">Nombre</string>
    <string name="address_line1">Dirección linea 1</string>
    <string name="address_line2">Dirección linea 2</string>
    <string name="cp">Código postal*</string>
    <string name="email">Correo electrónico*</string>
    <string name="phone">Teléfono de contacto</string>
    <string name="clean_service">¿Qué necesitas limpiar?</string>
    <string name="clean_type">Tipo de limpieza</string>
    <string name="clean_products">No necesito productos de limpieza</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="payment">Método de pago</string>
    <string name="enviar">Enviar</string>
    <string name="cargando">Cargando…</string>

    <!--INICIO-->
    <string name="intro">Nuestra labor es la Limpieza de todo tipo de sitios, desde casas hasta espacios industriales. Llámanos hoy mismo y verás que podemos ayudarte.\n\n​Prestamos servicio en Valencia  y Madrid.</string>
    <string name="item1">LIMPIEZA RESIDENCIAL Y GARAJES</string>
    <string name="item2">LIMPIEZA GENERAL EDIFICIOS Y LOCALES</string>
    <string name="item3">LIMPIEZA DE RESTOS DE OBRA</string>
    <string name="item3_desc">Ningún trabajo ni sitio está demasiado sucio para nuestro equipo.</string>
    <string name="item4">SUMINISTRO DE MATERIAL DE LIMPIEZA </string>
    <!--SERVICIOS-->
    <string name="org_central">ORGANIZACIÓN CENTRAL</string>
    <string name="org_central_desc">Deja que nuestros supervisores se ocupen de organizar la limpieza de tu casa o local, saben hacerlo realmente bien</string>
    <string name="limp_comercial">LIMPIEZA COMERCIAL</string>
    <string name="limp_comercial_desc">Sabemos que el precio es importante para tí, confia en nuestros comerciales y en el saber hacer de nuestra gente.</string>
    <string name="cristales">LIMPIEZA DE CRISTALES</string>
    <string name="cristales_desc">Tenemos soluciones para todas las situaciones, sabemos que es un engorro, pero nuestros cristaleros son lo más.</string>
    <string name="serv_oficina">SERVICIOS DE OFICINA</string>
    <string name="serv_oficina_desc">Una oficina limpia ayuda a promover un entorno de trabajo saludable y productivo.</string>
    <string name="limp_personalizada">LIMPIEZA PERSONALIZADA</string>
    <string name="limp_personalizada_desc">Elige si prefieres limpieza una vez al año o mantenimiento semanal.</string>
    <string name="limp_hogar">LIMPIEZA PROFUNDA DEL HOGAR</string>
    <string name="limp_hogar_desc">Ponemos todo nuestro empeño para que todo quede de la mejor manera.</string>

    <!--LIMPIEZA ECOLOGICA-->
    <string name="limpieza_ecologica_1">DESCUBRE NUESTRA LIMPIEZA RESPETUOSA  CON EL MEDIO AMBIENTE</string>
    <string name="limpieza_ecologica_2">La limpieza del hogar con productos químicos altamente agresivos y tóxicos conlleva muchas preocupaciones para la salud personal y medioambiental.</string>
    <string name="limpieza_ecologica_3">La limpieza ecológica recomienda para realizar la limpieza  la utilización de productos biodegradables que se evaporan o desintegran en muy corto tiempo.</string>

    <!--CONOCENOS-->
    <string name="conocenos_nombre">Néteo, servicios integrales de limpieza</string>
    <string name="conocenos_calle">C/Travessera del bovalar ,58 Alacuas(Valencia)</string>
    <string name="conocenos_tel">+34.625552977</string>
    <string name="conocenos_call">0034625552977</string>
    <string name="conocenos_email">neteo@limpiezasneteo.com</string>
    <string name="email_subject">Néteo Limpiezas Conócenos</string>
    <string name="conocenos_facebook">Facebook</string>
    <string name="conocenos_facebook_url">https://facebook.com/Néteo-806458866108694/</string>
    <string name="conocenos_twitter">Twitter</string>
    <string name="conocenos_twitter_url">https://twitter.com/limpiezasneteo</string>

    <!--MENU-->
    <string name="inico_title">Inicio</string>
    <string name="formulario_title">Reservas</string>
    <string name="galeria_title">Galería</string>
    <string name="servicios_title">Servicios</string>
    <string name="eco_title">Limpieza Ecológica</string>
    <string name="conocenos_title">Conócenos</string>

    <!--RESERVAS-->
    <string name="formulario_reservas">*Reservas disponibles solo para las comunidades de Madrid y Valencia.</string>
    <string name="formulario_datos">Por favor, rellene el formulario con sus datos de contacto y la dirección del inmueble que desea limpiar.</string>
    <string name="reservas2_step1">Reservas: Paso 1 de 3</string>
    <string name="reservas2_step2">Reservas: Paso 2 de 3</string>
    <string name="reservas2_step3">Reservas: Paso 3 de 3</string>
    <string name="reservas2_anterior">Anterior</string>
    <string name="reservas2_siguiente">Siguiente</string>
    <string name="reservas2_reservar">Reservar</string>
    <string name="reservas2_enviar">Enviar</string>
    <string name="reservas2_cancelar">Cancelar</string>
    <string name="reservas2_comments">Comentarios</string>
    <string name="reservas2_confirm">Nos pondremos en contacto con usted lo antes posible para confirmar su reserva. Muchas gracias.</string>
    <string name="conocenos_web_url">http://www.limpiezasneteo.com</string>
    <string name="conocenos_web">www.limpiezasneteo.com</string>

    <!--ERRORS-->
    <string name="exception_contact_data">Por favor, introduzca su correo electrónico para poder contactar con usted. Paso 1.</string>
    <string name="exception_cp">Por favor, introduzca su código postal. Paso 1.</string>
    <string name="exception_no_service">Por favor, seleccione que desea limpiar. Paso 2.</string>
    <string name="exception_no_type">Por favor, seleccione el tipo de servicio. Paso 3.</string>
    <string name="exception_no_payment">Por favor, seleccione el método de pago. Paso 3.</string>
    <string name="exception_no_valid_date">Por favor, la fecha debe ser superior a 24h desde el momento en que realiza la reserva. Paso 3.</string>
    <string name="exception_unknown_error">Error inesperado, por favor pongase en contacto con nosotros lo antes posible.</string>
    <string name="exception_send_email">No ha sido posible enviar su reserva, por favor intentelo más tarde.</string>
    <string name="contact_type_label">Contacto*</string>

    <array name="menu">
        <item>Inicio</item>
        <item>Reserva</item>
        <item>Servicios</item>
        <item>Limpieza Ecológica</item>
        <item>Galería</item>
        <item>Conócenos</item>
    </array>

    <array name="payment_type">
        <item>Efectivo</item>
        <item>Tarjeta de crédito</item>
    </array>

    <array name="servicios">
        <item>Limpieza normal</item>
        <item>Resto de obra</item>
        <item>Limpieza de cristales</item>
        <item>Limpieza ecológica</item>
        <item>Limpieza de alfombras y moquetas</item>
        <item>Vitrificado y abrillantado de pavimentos</item>
    </array>

    <array name="precios_sin_producto">
        <item>11 €/Hora IVA no incluido</item>
        <item>13 €/Hora IVA no incluido</item>
        <item>14 €/Hora IVA no incluido</item>
        <item>13 €/Hora IVA no incluido</item>
        <item>15 €/m2 IVA no incluido</item>
        <item>2 €/m2 IVA no incluido</item>
    </array>

    <array name="precios_con_producto">
        <item>10 €/Hora IVA no incluido</item>
        <item>12 €/Hora IVA no incluido</item>
        <item>14 €/Hora IVA no incluido</item>
        <item>13 €/Hora IVA no incluido</item>
        <item>15 €/m2 IVA no incluido</item>
        <item>2 €/m2 IVA no incluido</item>
    </array>

</resources>
