<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/clean_type"
            android:textColor="@color/colorAccent" />

        <ListView android:id="@+id/lv_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:layout_marginBottom="@dimen/activity_vertical_margin"></ListView>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chk_clean_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/clean_products"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/date"
                android:textColor="@color/colorAccent" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/time"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/payment"
            android:textColor="@color/colorAccent" />

        <ListView android:id="@+id/lv_payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:choiceMode="singleChoice"></ListView>
    </LinearLayout>

    <RelativeLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario_reservas"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="0dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservas2_anterior"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_back"
            android:layout_below="@+id/tv_warning"
            android:layout_alignParentLeft="true"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="24sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_reservar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservas2_reservar"
            android:gravity="center"
            android:drawableRight="@drawable/ic_action_shop_blue"
            android:layout_below="@+id/tv_warning"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="24sp"/>

    </RelativeLayout>

</LinearLayout>
