<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.reservas.FormActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formulario_datos"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_address_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/address_line1"
                android:inputType="text"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_address_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/address_line2"
                android:inputType="text"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_cp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:inputType="textPostalAddress"
                android:hint="@string/cp"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:id="@+id/sp_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/email"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </ScrollView>
    <RelativeLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario_reservas"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="0dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservas2_siguiente"
            android:gravity="center"
            android:drawableRight="@drawable/ic_next"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_warning"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="24sp"/>

    </RelativeLayout>
</RelativeLayout>